--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <!-- Header -->
   <header class="site-header">
-    <img src="images/header.png" alt="Collage of computing history: Jacquard loom punch cards, early video game, modern data center" class="header-image">
+    <img src="header.png" alt="Collage of computing history: Jacquard loom punch cards, early video game, modern data center" class="header-image">
     <div class="header-content">
       <h1>Digital Humanities</h1>
       <p class="header-subtitle">History and Methods</p>
